--- a/M1S02/M1S02 - Ex 1/index.html
+++ b/M1S02/M1S02 - Ex 1/index.html
@@ -1,1 +1,13 @@
-M1S02 - Ex 1
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Use o console do navegador</title>
+</head>
+
+<body>
+    <script src="script.js"></script>
+</body>
+
+</html>
