Add index.html ex6

--- a/M1S02/Exercício6/index.html
+++ b/M1S02/Exercício6/index.html
@@ -1,1 +1,10 @@
-Exercício6
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Use operadores para fazer cálculos</title>
+  </head>
+  <body>
+    <script src="script.js"></script>
+  </body>
+</html>
