--- a/M1S03/S03EX03/index.html
+++ b/M1S03/S03EX03/index.html
@@ -1,1 +1,10 @@
-S03EX03
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Removendo elementos da tela</title>
+  </head>
+  <body id="body">
+    <script src="script.js"></script>
+  </body>
+</html>
