--- a/M1S03/S03EX04/index.html
+++ b/M1S03/S03EX04/index.html
@@ -1,1 +1,23 @@
-s03ex04
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Páginas sem redirecionamento</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="#">Galeria</a></li>
+            <li><a href="#">Vídeo</a></li>
+            <li><a href="#">Perfil</a></li>
+        </ul>
+    </nav>
+    <script src="script.js"></script>
+</body>
+
+</html>
