--- a/M1S03/S03EX04/index.html
+++ b/M1S03/S03EX04/index.html
@@ -11,11 +11,9 @@
 
 <body>
     <nav class="navbar">
-        <ul>
-            <li><a href="#">Galeria</a></li>
-            <li><a href="#">Vídeo</a></li>
-            <li><a href="#">Perfil</a></li>
-        </ul>
+        <span onclick="createImg();"><a href="#galeria">Galeria</a></span>
+        <span><a href="#video">Vídeo</a></span>
+        <span><a href="#perfil">Perfil</a></span>
     </nav>
     <script src="script.js"></script>
 </body>
