--- a/M1S03/S03EX04/index.html
+++ b/M1S03/S03EX04/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Páginas sem redirecionamento</title>
     <link rel="stylesheet" href="style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar">
-        <span onclick="createImg();"><a href="#galeria">Galeria</a></span>
-        <span><a href="#video">Vídeo</a></span>
-        <span><a href="#perfil">Perfil</a></span>
+      <span id="clickGaleria"><a href="#galeria">Galeria</a></span>
+      <span id="clickVideo"><a href="#video">Vídeo</a></span>
+      <span id="clickPerfil"><a href="#perfil">Perfil</a></span>
     </nav>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
