--- a/M1S03/S03EX06/index.html
+++ b/M1S03/S03EX06/index.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obtendo dados externos</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: lightpink;
+      }
+      h1 {
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        font-size: 2em;
+        text-align: center;
+        text-decoration: underline;
+        text-decoration-color: lightseagreen;
+      }
+      #containerDogs {
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         height: 400px;
+         padding: 20px;
+         gap: 1em;
+      }
+    </style>
   </head>
   <body>
+    <h1>Fotos de Cachorros</h1>
+    <div id="containerDogs"></div>
     <script src="script.js"></script>
   </body>
 </html>
