--- a/M1S03/S03EX07/index.html
+++ b/M1S03/S03EX07/index.html
@@ -1,1 +1,11 @@
-s03x07
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Explorando dados externos</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <script src="script.js"></script>
+</body>
+</html>
