link rel style.css

--- a/M1S03/S03EX06/index.html
+++ b/M1S03/S03EX06/index.html
@@ -5,28 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obtendo dados externos</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        background-color: lightpink;
-      }
-      h1 {
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-        font-size: 2em;
-        text-align: center;
-        text-decoration: underline;
-        text-decoration-color: lightseagreen;
-      }
-      #containerDogs {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         height: 400px;
-         padding: 20px;
-         gap: 0.5em;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Fotos de Cachorros</h1>
