--- a/M1S03/S03EX09/index.html
+++ b/M1S03/S03EX09/index.html
@@ -1,1 +1,11 @@
-s03ex09
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Criando Gráficos Dinâmicos</title>
+</head>
+<body>
+    <ul id="list"></ul>
+    <script src="script.js"></script>
+</body>
+</html>
