Add canvas element

--- a/M1S03/S03EX09/index.html
+++ b/M1S03/S03EX09/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <ul id="list"></ul>
+    <canvas id="canvas"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
