--- a/M1S03/S03EX09/index.html
+++ b/M1S03/S03EX09/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Criando Gráficos Dinâmicos</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Criando Gráficos Dinâmicos</title>
 </head>
+
 <body>
-    <ul id="list"></ul>
-    <canvas id="canvas"></canvas>
-    <script src="script.js"></script>
+  <ul id="list"></ul>
+  <div>
+    <canvas id="myChart"></canvas>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
