--- a/M1S05/S5EX3/index.html
+++ b/M1S05/S5EX3/index.html
@@ -7,6 +7,6 @@
     <title>Utilizando filter com arrow function</title>
 </head>
 <body>
-    
+    <script src="script.js"></script>
 </body>
 </html>
