--- a/M1S05/S5EX7/index.html
+++ b/M1S05/S5EX7/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div id="personagem"></div>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
