--- a/M1S06/index.html
+++ b/M1S06/index.html
@@ -5,6 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acesse API retornando Promise e exiba resultados na página</title>
+
+    <style>
+        body {
+            background-color: #030303;
+            font-family: 'Courier New', Courier, monospace;
+       }
+        h1 {
+            text-align: center;
+            color: white;
+       }
+       .users {
+           display: flex;
+           gap: 2em;
+           margin: 20px;
+           background-color: #1a1a1b;
+       }
+       img {
+           border-radius: 100px;
+       }
+       p {
+           color: wheat;
+       }
+    </style>
+
 </head>
 <body>
     <script src="APIrandomUserGenerator.js"></script>
